--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             h1 {
                 font-size: 45px;
-                color: goldenrod;
+                color: rgb(218, 32, 32);
                 font-family: rockwell;
                 -webkit-text-stroke: 2px black;
             }
